--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "project-food",
+  "homepage": "https://ajor-saha.github.io/Food-Delivery-App/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
